crates/solidity-v2/testing/snapshots/diagnostics_output/resolution/identifier_redeclaration/yul_shadow_import_alias/generated/slang/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

Error: Identifier already declared.
   ╭─[main.sol:9:17]
   │
 9 │             let b := 3
   │                 ┬  
   │                 ╰── Error occurred here.
───╯
